<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".AboutUs">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15sp"
            android:gravity="fill_vertical"
            android:orientation="vertical"
            android:paddingBottom="50sp"
            android:weightSum="1">

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/v"
                android:textColor="@color/txt"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="30dp"
                android:paddingLeft="20dp"
                android:text="@string/d"
                android:textColor="@color/txt"
                android:textSize="20sp"/>
            <!--start e1-->


            <androidx.cardview.widget.CardView
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/cardview_light_background"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/e1_img"
                        style="@style/about_img"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/txt1"
                        android:padding="10sp"
                        app:srcCompat="@drawable/f" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/e1_n"
                            style="@style/about_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e1_n" />

                        <TextView
                            android:id="@+id/e1_e"
                            style="@style/about_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e1_e" />

                        <TextView
                            android:id="@+id/e1_em"
                            style="@style/about_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e1_em" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!--end e1-->

            <!--start e2-->
            <androidx.cardview.widget.CardView
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/cardview_light_background"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:foregroundGravity="right"
                    android:gravity="right"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/e2_n"
                            style="@style/about_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e2_n" />

                        <TextView
                            android:id="@+id/e2_e"
                            style="@style/about_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e2_e" />

                        <TextView
                            android:id="@+id/e2_em"
                            style="@style/about_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e2_em" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/e2_img"
                        style="@style/about_img"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/txt2"
                        android:padding="10sp"
                        app:srcCompat="@drawable/m" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!--end e2-->

            <!--start e3-->
            <androidx.cardview.widget.CardView
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/cardview_light_background"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/e3_img"
                        style="@style/about_img"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/txt3"
                        android:padding="10sp"
                        app:srcCompat="@drawable/m" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/e3_n"
                            style="@style/about_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e3_n" />

                        <TextView
                            android:id="@+id/e3_e"
                            style="@style/about_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e3_e" />

                        <TextView
                            android:id="@+id/e3_em"
                            style="@style/about_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e3_em" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!--end e3-->
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>